# myTools

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: vtkColorSeries类与annotation的学习.md  自定义包含多个vtkTextActor的类.md  通过mapper设置actor的显示.md
docs/linux/: README.md
docs/vtk/: 将Actor(如 vtkAxesActor)+png图片数据以像素大小显示.md  有限元模型的变形云图的绘制.md  自动计算变形缩放和系数.md
docs/有限元主应力计算方法/: 2301sec_stress_formula.md
include/: hfile.h
include/qt_component/: left_tab_widget.h
include/tools/: Singleton.h  boost_serialize_define.h  class_register.h  construct_define.h  declare_operator_funcs.h  gui_common_define.h  hash_func.h  msg_service.h  notifier_and_observer.h  safe_queue.h  simple_thread_pool.h  stack_track.h  table_driven.h  tassk_class.h  ticker.h
include/tools/cfgdc/: cfgdc.h
include/tools/timer/: timer.h
src/: CMakeLists.txt  app.c  class_auto_reg_test_main.cpp  construct_test_main.cpp  func_test_case.cpp  infra_structure_test.cpp  message_service.cpp  points_id_show.cpp  signal_test_case.cpp  temp_test.cpp  ticker.cpp  ticker.h
src/a/: CMakeLists.txt  a.cpp
src/b/: b.cpp
src/box_selection_cells/: danyh_pick_cell.cpp  highligth_cells.cpp
src/box_selection_points/: highligth_points.cpp  highligth_points_use_vertex_filter.cpp
src/hpc_test/: CMakeLists.txt
src/infrastructure_functoin_test/: class_template_test.cpp  construct_test_main.cpp  indent_test.cpp  observer_test_main.cpp  signal_test_case.cpp
src/infrastructure_functoin_test/socket_communication/: socket_client.cpp  socket_server.cpp
src/tools/: CMakeLists.txt  cfgdc.cpp  msg_service.cpp  notifier_and_observer.cpp  stack_track.cpp  test_bit.cpp  ticker.cpp  timer.cpp  timer_test_main.cpp  wrapper_cpp_to_py.cpp
src/vtk/: CMakeLists.txt  add_field_data.cpp  cutter_test.cpp  extract_surface.cpp  pick_point.cpp  points_id_show.cpp  set_actor_layer_by_mapper.cpp  show_arrow_lius.cpp  text_widget_show_test.cpp
src/vtk/axis_and_coord/: axis_test.cpp  coord_test.cpp  create_axis_danyh.cpp
src/vtk/box_selection_cells/: danyh_pick_cell.cpp  highligth_cells.cpp
src/vtk/box_selection_points/: highligth_points_use_vertex_filter.cpp
src/vtk/change_layer/: set_actor_layer_by_renderer.cpp
src/vtk/composed_actor/: compose_two_cone.cpp  display_three_arrow.cpp  vtkArrowWithCone.cpp  vtkArrowWithTextSource.cpp  vtkMultiTextActorVector.h
src/vtk/contour_line/: contour_line.cpp
src/vtk/feature_edge_serface/: feature_edge_surface.cpp
src/vtk/fixed_pixe_size/: distance_to_camera_picture.cpp  pixel_size_of_actor.cpp
src/vtk/pixel_distance_of_points/: calc_pixel_distance_of_points.cpp
src/vtk/scalarBar_example/: scalar_bar_example2.cpp
src/vtk/show_label/: show_chinese_label.cpp
src/vtk/show_picture/: show_picture.cpp
src/vtk/slice_and_cutter/: clip_test.cpp  clip_test_new_scheme.cpp  cutter_test.cpp  show_clip_view_by_vtkPlanWidget.cpp
src/vtk/stop_char_event/: StopEvent.h
src/vtk_test/: CMakeLists.txt
test/finite_element/: eigen_ShiftInvert.cpp  eigen_ShiftInvert22.cpp  eigen_ShiftInvert_all_eigen.cpp  eigen_SparseCholesky.cpp  main_stress_cal.cpp  principle_stress_cal.cpp
test/finite_element/start_matlab/: compute_solution_by_matlab.m  start_matlab.bat  start_matlab.cpp  start_matlab.vbs  vbslog.txt  zzy.m
test/infrastructure_functoin_test/: error_code_test.cpp  file_writer_test.cpp  infra_structure_test.cpp  observer_test_main.cpp
test/vtk/: multiphy_point_same_position.cpp  points_id_show.cpp  rigid_body_element.cpp  show_deformed_contour.cpp
test/vtk/animation/plan1/: Animation.cpp
test/vtk/animation/plan2/: AnimateActors.cpp  AnimateActors.h  AnimationScene.cxx
test/vtk/axis_and_coord/: coord_test.cpp  fix_axis_position.cpp  vtkAxesWidget.cpp  vtkAxesWidget.h
test/vtk/box_selection_cells/: danyh_pick_cell.cpp  highligth_cells.cpp
test/vtk/box_selection_points/: danyh_point_picker.cc  highligth_points.cpp  highligth_points_add_fieiddata.cpp
test/vtk/click_select_cells/: click_select_cells.cpp
test/vtk/click_select_points/: pick_any_point.cpp
test/vtk/click_select_points/pick_point_on_model/: point_picker_interactor_style.cpp  point_picker_interactor_style.h  use_point_picker_interactor_style.cpp
test/vtk/cloud_picture/: element_cloud_picture.cpp
test/vtk/composed_actor/: vtkArrowWithCone.cpp  vtkMultiTextActorVector.cpp
test/vtk/contour_line/: contour_line.cpp
test/vtk/data/: zzy.vtk
test/vtk/fixed_pixe_size/: distance_to_camera_vtk_source.cpp
test/vtk/hide_cell/: hide_cell.cpp
test/vtk/io_image/: io_png_jpg_image.cpp
test/vtk/quadrilateral_element/: quadrilateral_element.cpp
test/vtk/scalarBar_example/: scalar_bar_example.cpp
test/vtk/show_label/: text_widget_show_test.cpp
test/vtk/show_picture/: fix_position_picture.cpp  show_picture.cpp
test/vtk/slice_and_cutter/: clip_test.cpp  clip_test_new_scheme.cpp  cutter_test.cpp
test/vtk/specify_rotation_center/: basic_interactor_style.cpp  basic_interactor_style.h  only_rotate_specificed_actor.cpp  rotate_scene.cpp  self_define_rotate.cc  self_define_rotate_camera.cc
test/vtk/stop_char_event/: StopEvent.cc  stop_event.cc
